worked on workcation

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="./build/tailwind.css" />
   </head>
-  <body>
-    <h1 class="text-4xl font-bold text-center text-blue-500">hello world</h1>
+  <body class="bg-gray-100">
+    <div class="px-8 py-12">
+      <img src="/public/img/logo.svg" alt="workcation" class="h-10" />
+      <img
+        src="/public/img/beach-work.jpg"
+        alt="beach-work"
+        class="mt-6 rounded-lg shadow-xl"
+      />
+      <h1 class="mt-6 text-2xl font-bold text-gray-900 leading-tight">
+        You can work from anywhere.
+        <span class="text-indigo-500">Take advantage of it.</span>
+      </h1>
+      <p class="mt-2 text-gray-600">
+        Workcation helps you find work-friendly rentals in beautiful locations
+        so you can enjoy some nice weather even when you're not on vacation.
+      </p>
+      <div class="mt-4">
+        <a
+          href="#"
+          class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm"
+          >Book your escape</a
+        >
+      </div>
+    </div>
   </body>
 </html>
