responsive design using utility classes

--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,45 @@
     <title>Document</title>
     <link rel="stylesheet" href="./build/tailwind.css" />
   </head>
-  <body class="bg-gray-100">
-    <div class="px-8 py-12">
-      <img src="/public/img/logo.svg" alt="workcation" class="h-10" />
-      <img
-        src="/public/img/beach-work.jpg"
-        alt="beach-work"
-        class="mt-6 rounded-lg shadow-xl"
-      />
-      <h1 class="mt-6 text-2xl font-bold text-gray-900 leading-tight">
-        You can work from anywhere.
-        <span class="text-indigo-500">Take advantage of it.</span>
-      </h1>
-      <p class="mt-2 text-gray-600">
-        Workcation helps you find work-friendly rentals in beautiful locations
-        so you can enjoy some nice weather even when you're not on vacation.
-      </p>
-      <div class="mt-4">
-        <a
-          href="#"
-          class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm"
-          >Book your escape</a
-        >
+  <body class="bg-gray-300">
+    <div class="flex bg-gray-100">
+      <div
+        class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:w-1/2 lg:max-w-full lg:py-24 lg:px-12"
+      >
+        <div class="xl:max-w-lg xl:ml-auto">
+          <img src="/public/img/logo.svg" alt="workcation" class="h-10" />
+          <img
+            src="/public/img/beach-work.jpg"
+            alt="beach-work"
+            class="mt-8 rounded-lg shadow-xl sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+          />
+          <h1
+            class="mt-6 text-2xl font-bold text-gray-900 leading-tight sm:text-4xl sm:mt-8 xl:text-4xl"
+          >
+            You can work from anywhere.
+            <br class="hidden lg:inline" />
+            <span class="text-indigo-500">Take advantage of it.</span>
+          </h1>
+          <p class="mt-2 text-gray-600 sm:text-xl sm:mt-4 lg:text-3xl">
+            Workcation helps you find work-friendly rentals in beautiful
+            locations so you can enjoy some nice weather even when you're not on
+            vacation.
+          </p>
+          <div class="mt-4 sm:mt-6">
+            <a
+              href="#"
+              class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm sm:text-base"
+              >Book your escape</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="hidden lg:block lg:w-1/2 lg:relative">
+        <img
+          src="/public/img/beach-work.jpg"
+          alt="beach-work"
+          class="absolute inset-0 h-full w-full object-center object-cover"
+        />
       </div>
     </div>
   </body>
