--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <div class="mt-4 sm:mt-6">
             <a
               href="#"
-              class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm sm:text-base"
+              class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm sm:text-base hover:bg-indigo-400 focus:outline-none focus:shadow-outline active:bg-indigo-600"
               >Book your escape</a
             >
           </div>
