--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,7 @@
             vacation.
           </p>
           <div class="mt-4 sm:mt-6">
-            <a
-              href="#"
-              class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm sm:text-base hover:bg-indigo-400 focus:outline-none focus:shadow-outline active:bg-indigo-600"
-              >Book your escape</a
-            >
+            <a href="#" class="btn">Book your escape</a>
           </div>
         </div>
       </div>
