button class added well

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,12 @@
             vacation.
           </p>
           <div class="mt-4 sm:mt-6">
-            <a href="#" class="btn">Book your escape</a>
+            <a href="#" class="btn btn-indigo shadow-lg  sm:text-base"
+              >Book your escape</a
+            >
+            <a href="#" class="ml-2 btn btn-gray   sm:text-base"
+              >Book your escape</a
+            >
           </div>
         </div>
       </div>
